--- a/react-homework-1/src/components/IDCard/IDCard.css
+++ b/react-homework-1/src/components/IDCard/IDCard.css
@@ -1,7 +1,40 @@
 .id-card__wrapper {
-    color: white;
+    color: rgb(43, 40, 40);
+    position: relative;
+    flex-wrap: wrap;
+    border-radius: 14px;
+    background: white;
+}
+
+.id-card__wrapper:nth-child(1) {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.id-card__wrapper:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2;
+}
+.id-card__wrapper:nth-child(3) {
+    grid-column: 1;
+    grid-row: 1;
 }
 
 .id-card__wrapper img {
     border: 0.3rem white solid;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    border-radius: 14px;
+    transition: all ease-in 300ms;
+}
+
+.id-card__wrapper:hover img,
+.id-card__wrapper:active img {
+    height: 3%;
+    top: 97%;
 }
