--- a/react-homework-1/src/components/Movie/Movie.css
+++ b/react-homework-1/src/components/Movie/Movie.css
@@ -1,3 +1,43 @@
+.movie__wrapper {
+    position: relative;
+    transition: transform ease-in-out 1000ms;
+}
 .movie__wrapper img {
     border: 0.3rem rgb(218, 13, 126) solid;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity ease-in-out 1000ms;
+}
+
+.movie__wrapper:nth-child(1) {
+    grid-row: 1;
+    grid-row-end: 3;
+    grid-column: 1;
+    grid-column-end: 3;
+}
+
+.movie__wrapper:nth-child(2) {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+.movie__wrapper:nth-child(1):hover {
+    transform: rotateZ(320deg);
+}
+
+.movie__wrapper:nth-child(2):hover {
+    transform: rotateZ(400deg);
+}
+
+.movie__wrapper:nth-child(3):hover {
+    transform: rotateZ(360deg);
+}
+.movie__wrapper:hover img {
+    opacity: 0;
+}
+
+@media only screen and (max-width: 600px) {
 }
