--- a/react-homework-1/src/index.css
+++ b/react-homework-1/src/index.css
@@ -5,6 +5,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: linear-gradient(black, white);
+    overflow-x: clip;
+}
+html {
+    overflow-x: clip;
 }
 
 code {
